<!--

    MIT License

    Copyright (c) 2019  RasPi Check Contributors

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all
    copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE.

-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".NewRaspiActivity">

        <LinearLayout
            android:id="@+id/relativeLayoutPortSudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp"
                android:id="@+id/port_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_raspi_ssh_port_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:hint="@string/ssh_port"
                    android:inputType="number"
                    android:maxLines="1"
                    android:minEms="3"
                    android:text="@string/default_ssh_port" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="10dp"
                android:id="@+id/sudo_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_raspi_sudoPass_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="65dp"
                    android:ems="10"
                    android:hint="@string/raspi_device_sudo_password_hint"
                    android:inputType="text|textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/textAuthMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/new_raspi_auth_method"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/spinnerAuthMethod"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textAuthMethod" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_key_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/raspi_auth_keyfile_hint"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:textColor="@color/colorPrimary"
                android:id="@+id/buttonKeyfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_key_file"
                android:onClick="onButtonClick"
                android:text="@string/raspi_auth_button_keyfile" />

            <CheckBox
                android:id="@+id/checkboxAsk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonKeyfile"
                android:checked="true"
                android:onClick="onCheckboxClick"
                android:text="@string/raspi_key_checkbox_text" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="10dp"
                android:id="@+id/key_password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkboxAsk"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/key_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:ems="10"
                    android:hint="@string/raspi_key_password_hint"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="10dp"
            android:id="@+id/ssh_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ssh_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/raspi_device_password_hint"
                android:inputType="textPassword">

                <!--                <requestFocus />-->
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>